makedumpfile (1.3.3-1) UNRELEASED; urgency=low

  * Upload to Debian. Changes from Ubuntu:

 -- John Wright <jsw@debian.org>  Sat, 25 Jul 2009 13:54:15 +0200

makedumpfile (1.3.3-0ubuntu4) karmic; urgency=low

  * debian/patches/02-Add_x86_64_linux-2.6.31.patch:
    - apply patch by Ken'ichi Ohmichi to support 2.6.31 on
      amd64 (kernel memory layout changed)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Jul 2009 09:18:33 +0200

makedumpfile (1.3.3-0ubuntu3) karmic; urgency=low

  * debian/rules, debian/control:
    - add dpatch
  * debian/patches/01_fix_makefile:
    - fix make install target

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 13:14:10 +0200

makedumpfile (1.3.3-0ubuntu2) karmic; urgency=low

  * fix FTBFS due to missing man dir

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 09:21:08 +0200

makedumpfile (1.3.3-0ubuntu1) karmic; urgency=low

  * New upstream release
  * depends on latest libdw-dev (the previous version does
    not ship the required static lib)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Jun 2009 16:19:42 +0200

makedumpfile (1.2.9-0ubuntu3) intrepid; urgency=low

  * Add missing build dependency "zip" to fix FTBFS.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 08 Oct 2008 15:11:25 +0200

makedumpfile (1.2.9-0ubuntu2) intrepid; urgency=low

  * Corrected FTBFS caused by a mistake in the makefile

 -- Michael Casadevall <sonicmctails@gmail.com>  Mon, 06 Oct 2008 02:01:26 -0400

makedumpfile (1.2.9-0ubuntu1) intrepid; urgency=low

  * New upstream version (LP: #271956)
  * Support ia64 discontigmem kernels of linux-2.6.20+.
  * Support x86_64 linux-2.6.27 kernel.
  * Add "--vtop" option for debugging.
  * Add the debugging message for ia64 pgtable.
  * Get information from vmcoreinfo of /proc/vmcore even if -x/-i option.
  * Add free() for error handling.
  * Fix NOT_FOUND value of SIZE(nodemask_t).
  * Use the terminal sizes of 80 for the IMPLEMENTATION file. (Bernhard Walle)