@@ -1,2 +1,0 @@
-01_fix_makefile.dpatch
-02-Add_x86_64_linux-2.6.31.patch
