@@ -1,11 +1,9 @@
-#! /bin/sh /usr/share/dpatch/dpatch-run
-##
-##
-## Patch: http://sourceforge.net/tracker/index.php?func=detail&aid=2819382&group_id=178938&atid=887141
-##
-## DP: make it work on amd64 for 2.6.31 
+Add support for amd64 on 2.6.31
 
-@DPATCH@
+Patch by Ken'ichi Ohmichi to support 2.6.31 on amd64 (kernel memory
+layout changed)
+
+http://sourceforge.net/tracker/index.php?func=detail&aid=2819382&group_id=178938&atid=887141
 
 diff -rpuN a/makedumpfile.h b/makedumpfile.h
 --- a/makedumpfile.h	2009-07-08 16:22:16.000000000 +0900
