@@ -1,10 +1,5 @@
-#! /bin/sh /usr/share/dpatch/dpatch-run
-## 01_fix_makefile.dpatch by  <egon@top>
-##
-## All lines beginning with `## DP:' are a description of the patch.
-## DP: No description.
+Use install instead of cp in Makefile
 
-@DPATCH@
 diff -urNad makedumpfile-1.3.3~/Makefile makedumpfile-1.3.3/Makefile
 --- makedumpfile-1.3.3~/Makefile	2009-04-20 08:26:23.000000000 +0200
 +++ makedumpfile-1.3.3/Makefile	2009-06-23 13:23:37.538753532 +0200
