@@ -1,8 +1,9 @@
 makedumpfile (1.3.3-1) UNRELEASED; urgency=low
 
   * Upload to Debian. Changes from Ubuntu:
+    - Switch to quilt from dpatch
 
- -- John Wright <jsw@debian.org>  Sat, 25 Jul 2009 13:54:15 +0200
+ -- John Wright <jsw@debian.org>  Sat, 25 Jul 2009 13:56:00 +0200
 
 makedumpfile (1.3.3-0ubuntu4) karmic; urgency=low
 
